--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CityListBackBase</string>
+
+    <string name="hint_search">Type city for filter</string>
 </resources>
